# IKARUS

./: CMakeLists.txt  ikarus_partition_table.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  bmp390.c  bmp390.h  calibration.c  calibration.h  command_line_interface.c  defaults.c  defaults.h  esp_now_comm.c  esp_now_comm.h  filters.c  filters.h  gpio.c  gpio.h  hmc5883l.c  hmc5883l.h  i2c.c  ibus.c  ibus.h  main.c  nv_storage.c  nv_storage.h  qmc5883l.c  quaternion.c  quaternion.h  setup.h  small_drone_control.c  small_drone_control.h  state_estimator.c  state_estimator.h  typedefs.h  uart.c  uart.h  ublox.c  ublox.h  web_comm.c
main/comminication/: esp_now_comm.c  esp_now_comm.h  i2c.c  i2c.h  spi.c  spi.h  uart.c  uart.h  web_comm.c  web_comm.h
main/control/: quadcopter_control.c  quadcopter_control.h  small_drone_control.c  small_drone_control.h
main/sensors/: bmp390.c  hmc5883l.c  hmc5883l.h  icm42688p.c  icm42688p.h  pmw3901.c  pmw3901.h  qmc5883l.c  qmc5883l.h  tf_luna.c  tf_luna.h  ublox.c
main/storage/: blackbox.c  blackbox.h  nv_storage.c  nv_storage.h
