idf_component_register(SRCS 
"command_line_interface.c"
"small_drone_control.c"
"dshot_esc_encoder.c"
"state_estimator.c" 
"esp_now_comm.c"
"calibration.c"
"quaternion.c"
"nv_storage.c"
"icm42688p.c"
"defaults.c"
"hmc5883l.c"
"web_comm.c"
"qmc5883l.c"
"filters.c"
"bmp390.c"
"ublox.c"
"gpio.c" 
"main.c"
"uart.c"
"ibus.c"
"i2c.c"
"spi.c"
INCLUDE_DIRS ".")
