idf_component_register(SRCS 
"control/small_drone_control.c"
"control/quadcopter_control.c"
"comminication/esp_now_comm.c"
"comminication/web_comm.c"
"command_line_interface.c"
"storage/nv_storage.c"
"comminication/uart.c"
"sensors/icm42688p.c"
"dshot_esc_encoder.c"
"comminication/i2c.c"
"comminication/spi.c"
"sensors/qmc5883l.c"
"sensors/hmc5883l.c"
"storage/blackbox.c"
"state_estimator.c" 
"sensors/tf_luna.c"
"sensors/pmw3901.c"
"sensors/bmp390.c"
"sensors/ublox.c"
"calibration.c"
"quaternion.c"
"defaults.c"
"filters.c"
"gpio.c" 
"main.c"
"ibus.c"
INCLUDE_DIRS ".")
